bitfields/tests/compile_error_cases/errors/arrays/array_float_element_type.rs
use bitfields::bitfield;

#[bitfield([f32; 4])]
pub struct Bitfield {
    a: u32,
}

fn main() {}

