bitfields/tests/compile_error_cases/errors/arrays/array_float_element_type.stderr
error: The bitfield must have an unsigned integer literal as its first argument, floats are unsupported.
 --> tests/compile_error_cases/errors/arrays/array_float_element_type.rs:3:1
  |
3 | #[bitfield([f32; 4])]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
